# simple-python-project

./: README.md  pyproject.toml  tox.ini
src/sample/: __init__.py
tests/: test_simple.py
