# See here pyproject.toml ref: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "sampleproject"

description = "A sample Python project"

# NOTE: asciidoc not supported
readme = "README.md"

requires-python = ">=3.9"

# Should be a trove classifier
license = { text = "MIT License" }

keywords = ["sample", "setuptools", "development"]

authors = [{ name = "Techcable" }]

# See: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 2 - Pre-Alpha",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
]

dependencies = []

# Version computed by setuptools_scm
dynamic = ["version"]

[project.optional-dependencies]
dev = ["test", "mypy", "black", "isort"]
mypy = ["mypy>=1"]
test = ["pytest"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=60", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

# Dynamically compute version
[tool.setuptools_scm]


[tool.black]

[tool.isort]
profile = "black"
